HIVE-21199: Replace all occurences of new Byte with Byte.valueOf (Ivan Suller via Zoltan Haindrich)
Signed-off-by: Zoltan Haindrich <kirk@rxd.hu>